<resources>
    <string name="app_name">Qstreak</string>

    <string name="submission_detail_contact_count">%1$d people</string>
    <string name="zip_code">What\'s your zip code?</string>
    <string name="name">What\'s your name? (optional)</string>
    <string name="continue_button_label">Start tracking</string>
    <string name="delete_submission">Delete Submission</string>
    <string name="onboarding_step1_action_text">Get started</string>
    <string name="onboarding_step1_mission_title">Stay safe</string>
    <string name="onboarding_step1_mission_text">👋 See your impact of staying home and keeping your community safe</string>
    <string name="woman_with_eyepatch">Woman with eyepatch</string>
    <string name="onboarding_step2_signup_text">📝 This information helps us calculate your daily activity score.</string>
    <string name="onboarding_step2_signup_title">About you</string>
    <string name="record_activity_label">Record Activity</string>
    <string name="record_activity_CTA_subtext">See how you\'re contributing to the curve.</string>
    <string name="score_meter_level_5">score meter level 5</string>
    <string name="help_button_text">what is this?</string>
    <string name="todays_score">Today\'s Score</string>
    <string name="daily_log_activity">Daily Log Activity</string>
    <string name="view_history">View History</string>
    <string name="longest_streak_icon">longest streak icon</string>
    <string name="longest_stretch">Longest Stretch</string>
    <string name="rank_icon">rank icon</string>
    <string name="risk_warning_icon">risk warning icon</string>
    <string name="activity_report">Activity Report</string>
    <string name="score_meter">score meter</string>
    <string name="new_submission_text">📉 Let’s get your score calculated for the day. You can return here at any time to update your daily input.</string>
    <string name="new_submission_contact_label">How many people did you come into close contact with today (approximate)?</string>
    <string name="new_submission_location_label">Did you go to any of the following locations?</string>
    <string name="daily_checkmark">daily_checkmark</string>
    <string name="hello_name">Hello %1$s!</string>
    <string name="hello">Hello!</string>
    <string name="people">people</string>
    <string name="person">person</string>
    <string name="delete_record_confirmation_title">Confirm Deletion</string>
    <string name="delete_record_confirmation_message">Are you sure you want to delete this record?</string>
    <string name="delete_record_confirmation_cancel">Cancel</string>
    <string name="delete_record_confirmation_confirm">Delete</string>
    <string name="dashboard_hazard_message">%1$s is at risk for continued outbreaks.</string>

    <!--    Field validation    -->
    <string name="zip_invalid">Please enter a valid ZIP code.</string>
    <string name="name_invalid">Please enter a valid name.</string>
    <string name="close_contact_header">What\'s close contact?</string>
    <string name="close_contact_text">Close contact means touching or being within 6 feet of another person.</string>
    <string name="todays_score_header">What\'s my score?</string>
    <string name="todays_score_text">Your score is a reflection of your risk level based on your reported activity and location relative to the Covid-19 outbreak.</string>
    <string name="close_window_text">Got It</string>
    <string name="profile_name">Name</string>
    <string name="profile">Profile</string>
    <string name="edit_label">Edit</string>
    <string name="user_zip_code">Zip Code</string>
    <string name="profile_button_text">profile button</string>
    <string name="edit_user_name">Edit User Name</string>
    <string name="save">Save</string>
    <string name="edit_zip_code">Edit Zip Code</string>
</resources>
