<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.qstreak.viewmodels.UserViewModel" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="@dimen/horizonal_margin"
        android:paddingTop="25dp">

        <LinearLayout
            android:id="@+id/header_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_back_black_36dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/edit_button"
                style="@style/HeaderButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_label"
                android:textAlignment="textEnd" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/profile_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header_buttons">

            <ImageView
                android:id="@+id/submission_detail_back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:src="@drawable/qstreak_user_icon" />

            <TextView
                style="@style/MainHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                android:textAlignment="textStart" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/profile_bottom_border"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_header">

            <TextView
                style="@style/SecondaryHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/profile_name"
                android:textColor="@android:color/black" />

            <TextView
                style="@style/UserInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@{viewModel.userName}"
                tools:text="Sandy" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/user_zip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/profile_bottom_border"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_name">

            <TextView
                style="@style/SecondaryHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/user_zip_code"
                android:textColor="@android:color/black" />

            <TextView
                style="@style/UserInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@{viewModel.userZipCode}"
                tools:text="02141" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>